Update the Zenodo entries.

--- a/All.bib
+++ b/All.bib
@@ -6,10 +6,10 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 3b7223da3fdf85a81a8e968a733a49da2d434d27
+% Commit: 10252f8c255b1d4c9bb5b2399b10d78feafd9dc7
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
-% Date:   2023-11-17
+% Date:   2023-11-25
 % ---------------------------
 
 
@@ -11563,22 +11563,7 @@
   doi           = {10.1090/conm/307/05265},
   url           = {https://doi.org/10.1090/conm/307/05265}
 }
-@article{bourgain:02:on,
-  author        = {Bourgain, J.},
-  title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {131},
-  year          = {2002},
-  pages         = {269--276},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {43A75 (42A38)},
-  mrnumber      = {1942312},
-  mrreviewer    = {Colin\ C.\ Graham},
-  doi           = {10.1007/BF02785861},
-  url           = {https://doi.org/10.1007/BF02785861}
-}
-@incollection{bourgain:02:on*1,
+@incollection{bourgain:02:on,
   author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
@@ -11594,7 +11579,7 @@
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
 }
-@incollection{bourgain:02:on*2,
+@incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
   title         = {On the distribution of {D}irichlet sums. {II}},
   booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
@@ -11605,6 +11590,21 @@
   mrclass       = {11M26},
   mrnumber      = {1956220},
   mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@article{bourgain:02:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {131},
+  year          = {2002},
+  pages         = {269--276},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {43A75 (42A38)},
+  mrnumber      = {1942312},
+  mrreviewer    = {Colin\ C.\ Graham},
+  doi           = {10.1007/BF02785861},
+  url           = {https://doi.org/10.1007/BF02785861}
 }
 @article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
@@ -11670,23 +11670,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_8}
 }
-@article{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
-  journal       = {Geom. Funct. Anal.},
-  fjournal      = {Geometric and Functional Analysis},
-  volume        = {13},
-  year          = {2003},
-  number        = {2},
-  pages         = {334--365},
-  issn          = {1016-443X,1420-8970},
-  mrclass       = {11K55 (28A80)},
-  mrnumber      = {1982147},
-  mrreviewer    = {Ben\ Joseph\ Green},
-  doi           = {10.1007/s000390300008},
-  url           = {https://doi.org/10.1007/s000390300008}
-}
-@incollection{bourgain:03:on*2,
+@incollection{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11701,6 +11685,22 @@
   mrreviewer    = {Apostolos\ A.\ Giannopoulos},
   doi           = {10.1007/978-3-540-36428-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
+}
+@article{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
+  journal       = {Geom. Funct. Anal.},
+  fjournal      = {Geometric and Functional Analysis},
+  volume        = {13},
+  year          = {2003},
+  number        = {2},
+  pages         = {334--365},
+  issn          = {1016-443X,1420-8970},
+  mrclass       = {11K55 (28A80)},
+  mrnumber      = {1982147},
+  mrreviewer    = {Ben\ Joseph\ Green},
+  doi           = {10.1007/s000390300008},
+  url           = {https://doi.org/10.1007/s000390300008}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -11751,22 +11751,6 @@
   url           = {https://doi.org/10.1016/j.crma.2004.03.027}
 }
 @incollection{bourgain:04:on,
-  author        = {Bourgain, Jean},
-  title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
-  note          = {Partial differential equations and applications},
-  journal       = {Discrete Contin. Dyn. Syst.},
-  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
-  volume        = {10},
-  year          = {2004},
-  number        = {1-2},
-  pages         = {75--88},
-  issn          = {1078-0947,1553-5231},
-  mrclass       = {47B80 (35P20 35Q40 37J40 37K55 81Q10)},
-  mrnumber      = {2026184},
-  doi           = {10.3934/dcds.2004.10.75},
-  url           = {https://doi.org/10.3934/dcds.2004.10.75}
-}
-@incollection{bourgain:04:on*1,
   author        = {Bourgain, J.},
   title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11781,6 +11765,22 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/978-3-540-44489-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-44489-3_9}
+}
+@incollection{bourgain:04:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
+  note          = {Partial differential equations and applications},
+  journal       = {Discrete Contin. Dyn. Syst.},
+  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
+  volume        = {10},
+  year          = {2004},
+  number        = {1-2},
+  pages         = {75--88},
+  issn          = {1078-0947,1553-5231},
+  mrclass       = {47B80 (35P20 35Q40 37J40 37K55 81Q10)},
+  mrnumber      = {2026184},
+  doi           = {10.3934/dcds.2004.10.75},
+  url           = {https://doi.org/10.3934/dcds.2004.10.75}
 }
 @article{bourgain:04:remark,
   author        = {Bourgain, Jean},
@@ -12537,23 +12537,7 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@incollection{bourgain:13:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
-  booktitle     = {Asymptotic geometric analysis},
-  series        = {Fields Inst. Commun.},
-  volume        = {68},
-  pages         = {39--44},
-  publisher     = {Springer, New York},
-  year          = {2013},
-  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
-  mrclass       = {37D50 (37D25)},
-  mrnumber      = {3076146},
-  mrreviewer    = {Boris\ Hasselblatt},
-  doi           = {10.1007/978-1-4614-6406-8\_3},
-  url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
-}
-@article{bourgain:13:on*2,
+@article{bourgain:13:on*1,
   author        = {Bourgain, J.},
   title         = {On the correlation of the {M}oebius function with rank-one systems},
   journal       = {J. Anal. Math.},
@@ -12568,7 +12552,7 @@
   doi           = {10.1007/s11854-013-0016-z},
   url           = {https://doi.org/10.1007/s11854-013-0016-z}
 }
-@article{bourgain:13:on*3,
+@article{bourgain:13:on*2,
   author        = {Bourgain, J.},
   title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
   journal       = {Israel J. Math.},
@@ -12583,6 +12567,22 @@
   mrreviewer    = {Gergely\ Harcos},
   doi           = {10.1007/s11856-013-0002-2},
   url           = {https://doi.org/10.1007/s11856-013-0002-2}
+}
+@incollection{bourgain:13:on*3,
+  author        = {Bourgain, J.},
+  title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
+  booktitle     = {Asymptotic geometric analysis},
+  series        = {Fields Inst. Commun.},
+  volume        = {68},
+  pages         = {39--44},
+  publisher     = {Springer, New York},
+  year          = {2013},
+  isbn          = {978-1-4614-6405-1; 978-1-4614-6406-8},
+  mrclass       = {37D50 (37D25)},
+  mrnumber      = {3076146},
+  mrreviewer    = {Boris\ Hasselblatt},
+  doi           = {10.1007/978-1-4614-6406-8\_3},
+  url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -12660,23 +12660,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@incollection{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {2116},
-  pages         = {71--83},
-  publisher     = {Springer, Cham},
-  year          = {2014},
-  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
-  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
-  mrnumber      = {3364680},
-  mrreviewer    = {Michael\ A.\ Perelmuter},
-  doi           = {10.1007/978-3-319-09477-9\_6},
-  url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
-}
-@article{bourgain:14:on*2,
+@article{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
   journal       = {Israel J. Math.},
@@ -12691,6 +12675,22 @@
   mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
   doi           = {10.1007/s11856-014-1059-2},
   url           = {https://doi.org/10.1007/s11856-014-1059-2}
+}
+@incollection{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {2116},
+  pages         = {71--83},
+  publisher     = {Springer, Cham},
+  year          = {2014},
+  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
+  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
+  mrnumber      = {3364680},
+  mrreviewer    = {Michael\ A.\ Perelmuter},
+  doi           = {10.1007/978-3-319-09477-9\_6},
+  url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -13354,6 +13354,20 @@
 }
 @article{bourgain:80:on,
   author        = {Bourgain, J.},
+  title         = {On lacunary sets},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {32},
+  year          = {1980},
+  number        = {1},
+  pages         = {29--32},
+  issn          = {0037-9476},
+  mrclass       = {05A99},
+  mrnumber      = {682989},
+  mrreviewer    = {J.\ Spencer}
+}
+@article{bourgain:80:on*1,
+  author        = {Bourgain, J.},
   title         = {On separable {B}anach spaces, universal for all separable reflexive spaces},
   journal       = {Proc. Amer. Math. Soc.},
   fjournal      = {Proceedings of the American Mathematical Society},
@@ -13367,20 +13381,6 @@
   mrreviewer    = {Zvi\ Altshuler},
   doi           = {10.2307/2043243},
   url           = {https://doi.org/10.2307/2043243}
-}
-@article{bourgain:80:on*1,
-  author        = {Bourgain, J.},
-  title         = {On lacunary sets},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {32},
-  year          = {1980},
-  number        = {1},
-  pages         = {29--32},
-  issn          = {0037-9476},
-  mrclass       = {05A99},
-  mrnumber      = {682989},
-  mrreviewer    = {J.\ Spencer}
 }
 @article{bourgain:80:on*2,
   author        = {Bourgain, J.},
@@ -14058,7 +14058,19 @@
   doi           = {10.1007/BF02392189},
   url           = {https://doi.org/10.1007/BF02392189}
 }
-@article{bourgain:84:on,
+@inproceedings{bourgain:84:on,
+  author        = {Bourgain, J.},
+  title         = {On nonisomorphisms of algebras of analytic functions},
+  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
+  series        = {Teubner-Texte Math.},
+  volume        = {67},
+  pages         = {145--154},
+  publisher     = {Teubner, Leipzig},
+  year          = {1984},
+  mrclass       = {46J15 (32E25)},
+  mrnumber      = {763536}
+}
+@article{bourgain:84:on*1,
   author        = {Bourgain, J.},
   title         = {On bases in the disc algebra},
   journal       = {Trans. Amer. Math. Soc.},
@@ -14073,18 +14085,6 @@
   mrreviewer    = {Jacques\ Mayer},
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
-}
-@inproceedings{bourgain:84:on*1,
-  author        = {Bourgain, J.},
-  title         = {On nonisomorphisms of algebras of analytic functions},
-  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
-  series        = {Teubner-Texte Math.},
-  volume        = {67},
-  pages         = {145--154},
-  publisher     = {Teubner, Leipzig},
-  year          = {1984},
-  mrclass       = {46J15 (32E25)},
-  mrnumber      = {763536}
 }
 @article{bourgain:84:on*2,
   author        = {Bourgain, J.},
@@ -14127,6 +14127,18 @@
   mrreviewer    = {Colin\ C.\ Graham}
 }
 @incollection{bourgain:84:sur,
+  author        = {Bourgain, Jean},
+  title         = {Sur le minimum de certaines sommes de cosinus},
+  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
+  series        = {Publ. Math. Orsay},
+  volume        = {84-1},
+  pages         = {Exp. No. 2, 7},
+  publisher     = {Univ. Paris XI, Orsay},
+  year          = {1984},
+  mrclass       = {11L03 (42A32)},
+  mrnumber      = {740713}
+}
+@incollection{bourgain:84:sur*1,
   author        = {Bourgain, J.},
   title         = {Sur l'approximation dans {$H^infty$}},
   booktitle     = {Seminar on the geometry of {B}anach spaces, {V}ol. {I}, {II} ({P}aris, 1983)},
@@ -14138,18 +14150,6 @@
   mrclass       = {30E10 (41A35 46J15)},
   mrnumber      = {781582},
   mrreviewer    = {Burglind\ J\"{o}ricke}
-}
-@incollection{bourgain:84:sur*1,
-  author        = {Bourgain, Jean},
-  title         = {Sur le minimum de certaines sommes de cosinus},
-  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
-  series        = {Publ. Math. Orsay},
-  volume        = {84-1},
-  pages         = {Exp. No. 2, 7},
-  publisher     = {Univ. Paris XI, Orsay},
-  year          = {1984},
-  mrclass       = {11L03 (42A32)},
-  mrnumber      = {740713}
 }
 @incollection{bourgain:84:vector,
   author        = {Bourgain, J.},
@@ -14230,20 +14230,6 @@
 }
 @article{bourgain:85:on*2,
   author        = {Bourgain, J.},
-  title         = {On square functions on the trigonometric system},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {37},
-  year          = {1985},
-  number        = {1},
-  pages         = {20--26},
-  issn          = {0037-9476},
-  mrclass       = {42A50 (42A45)},
-  mrnumber      = {847119},
-  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
-}
-@article{bourgain:85:on*3,
-  author        = {Bourgain, J.},
   title         = {On {L}ipschitz embedding of finite metric spaces in {H}ilbert space},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14257,6 +14243,20 @@
   mrreviewer    = {Michel\ Deza},
   doi           = {10.1007/BF02776078},
   url           = {https://doi.org/10.1007/BF02776078}
+}
+@article{bourgain:85:on*3,
+  author        = {Bourgain, J.},
+  title         = {On square functions on the trigonometric system},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {37},
+  year          = {1985},
+  number        = {1},
+  pages         = {20--26},
+  issn          = {0037-9476},
+  mrclass       = {42A50 (42A45)},
+  mrnumber      = {847119},
+  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
 @article{bourgain:85:sidon,
   author        = {Bourgain, Jean},
@@ -14708,19 +14708,19 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
   volume        = {61},
   year          = {1988},
   number        = {1},
-  pages         = {73--84},
+  pages         = {39--72},
   issn          = {0021-2172},
   mrclass       = {28D05},
-  mrnumber      = {937582},
+  mrnumber      = {937581},
   mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
+  doi           = {10.1007/BF02776301},
+  url           = {https://doi.org/10.1007/BF02776301}
 }
 @incollection{bourgain:88:on*1,
   author        = {Bourgain, J.},
@@ -14740,19 +14740,19 @@
 }
 @article{bourgain:88:on*2,
   author        = {Bourgain, J.},
-  title         = {On the maximal ergodic theorem for certain subsets of the integers},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
   volume        = {61},
   year          = {1988},
   number        = {1},
-  pages         = {39--72},
+  pages         = {73--84},
   issn          = {0021-2172},
   mrclass       = {28D05},
-  mrnumber      = {937581},
+  mrnumber      = {937582},
   mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776301},
-  url           = {https://doi.org/10.1007/BF02776301}
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15035,23 +15035,7 @@
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
 }
-@incollection{bourgain:91:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
-  booktitle     = {Geometric aspects of functional analysis (1989--90)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1469},
-  pages         = {179--191},
-  publisher     = {Springer, Berlin},
-  year          = {1991},
-  isbn          = {3-540-54024-5},
-  mrclass       = {42B15 (42B25 46E30)},
-  mrnumber      = {1122623},
-  mrreviewer    = {Peter\ I.\ Lizorkin},
-  doi           = {10.1007/BFb0089225},
-  url           = {https://doi.org/10.1007/BFb0089225}
-}
-@article{bourgain:91:on*2,
+@article{bourgain:91:on*1,
   author        = {Bourgain, J.},
   title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
   journal       = {Geom. Funct. Anal.},
@@ -15066,6 +15050,22 @@
   mrreviewer    = {W.\ J.\ Firey},
   doi           = {10.1007/BF01895416},
   url           = {https://doi.org/10.1007/BF01895416}
+}
+@incollection{bourgain:91:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
+  booktitle     = {Geometric aspects of functional analysis (1989--90)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1469},
+  pages         = {179--191},
+  publisher     = {Springer, Berlin},
+  year          = {1991},
+  isbn          = {3-540-54024-5},
+  mrclass       = {42B15 (42B25 46E30)},
+  mrnumber      = {1122623},
+  mrreviewer    = {Peter\ I.\ Lizorkin},
+  doi           = {10.1007/BFb0089225},
+  url           = {https://doi.org/10.1007/BFb0089225}
 }
 @incollection{bourgain:91:remarks,
   author        = {Bourgain, J.},
@@ -18550,6 +18550,20 @@
 }
 @article{carmona.nualart:88:random,
   author        = {Carmona, Ren\'{e} and Nualart, David},
+  title         = {Random nonlinear wave equations: propagation of singularities},
+  journal       = {Ann. Probab.},
+  fjournal      = {The Annals of Probability},
+  volume        = {16},
+  year          = {1988},
+  number        = {2},
+  pages         = {730--751},
+  issn          = {0091-1798},
+  mrclass       = {60H15 (35L05 35R60)},
+  mrnumber      = {929075},
+  url           = {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
+}
+@article{carmona.nualart:88:random*1,
+  author        = {Carmona, Ren\'{e} and Nualart, David},
   title         = {Random nonlinear wave equations: smoothness of the solutions},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -18563,20 +18577,6 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1007/BF00318783},
   url           = {https://doi.org/10.1007/BF00318783}
-}
-@article{carmona.nualart:88:random*1,
-  author        = {Carmona, Ren\'{e} and Nualart, David},
-  title         = {Random nonlinear wave equations: propagation of singularities},
-  journal       = {Ann. Probab.},
-  fjournal      = {The Annals of Probability},
-  volume        = {16},
-  year          = {1988},
-  number        = {2},
-  pages         = {730--751},
-  issn          = {0091-1798},
-  mrclass       = {60H15 (35L05 35R60)},
-  mrnumber      = {929075},
-  url           = {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 @book{carmona.nualart:90:nonlinear,
   author        = {Carmona, Ren\'{e} A. and Nualart, David},
@@ -21160,7 +21160,20 @@
   doi           = {10.1016/S0167-7152(99)00163-7},
   url           = {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
-@article{chen:00:on,
+@incollection{chen:00:on,
+  author        = {Chen, Xia},
+  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
+  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
+  series        = {Progr. Probab.},
+  volume        = {47},
+  pages         = {249--259},
+  publisher     = {Birkh\"{a}user Boston, Boston, MA},
+  year          = {2000},
+  mrclass       = {60F15 (60J55)},
+  mrnumber      = {1857326},
+  mrreviewer    = {Ingemar Kaj}
+}
+@article{chen:00:on*1,
   author        = {Chen, Xia},
   title         = {On the limit laws of the second order for additive functionals of {H}arris recurrent {M}arkov chains},
   journal       = {Probab. Theory Related Fields},
@@ -21174,19 +21187,6 @@
   mrnumber      = {1736591},
   doi           = {10.1007/PL00008724},
   url           = {https://doi.org/10.1007/PL00008724}
-}
-@incollection{chen:00:on*1,
-  author        = {Chen, Xia},
-  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
-  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
-  series        = {Progr. Probab.},
-  volume        = {47},
-  pages         = {249--259},
-  publisher     = {Birkh\"{a}user Boston, Boston, MA},
-  year          = {2000},
-  mrclass       = {60F15 (60J55)},
-  mrnumber      = {1857326},
-  mrreviewer    = {Ingemar Kaj}
 }
 @article{chen:01:exact,
   author        = {Chen, Xia},
@@ -21553,21 +21553,23 @@
   doi           = {10.1214/19-AIHP983},
   url           = {https://doi.org/10.1214/19-AIHP983}
 }
-@book{chen:23:some,
+@misc{chen:23:some,
   author        = {Le Chen},
   title         = {Some symbolic tools for the Fox {$H$}-function},
-  month         = nov,
-  year          = 2023,
+  month         = {nov},
+  year          = {2023},
   publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
   doi           = {10.5281/zenodo.10143785},
   url           = {https://doi.org/10.5281/zenodo.10143785}
 }
-@book{chen:23:spdes-bib,
+@misc{chen:23:spdes-bib,
   author        = {Le Chen},
   title         = {{SPDEs-Bib}: A Comprehensive Bibliography of Stochastic Partial Differential Equations and Related Topics},
-  month         = nov,
-  year          = 2023,
+  month         = {nov},
+  year          = {2023},
   publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
   doi           = {10.5281/zenodo.10143431},
   url           = {https://doi.org/10.5281/zenodo.10143431}
 }
@@ -25482,21 +25484,6 @@
 }
 @article{david.duplantier.ea:93:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
-  title         = {Renormalization of crumpled manifolds},
-  journal       = {Phys. Rev. Lett.},
-  fjournal      = {Physical Review Letters},
-  volume        = {70},
-  year          = {1993},
-  number        = {15},
-  pages         = {2205--2208},
-  issn          = {0031-9007},
-  mrclass       = {82B41 (81T17 81T30 82B28)},
-  mrnumber      = {1214561},
-  doi           = {10.1103/PhysRevLett.70.2205},
-  url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-@article{david.duplantier.ea:93:renormalization*1,
-  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
   title         = {Renormalization theory for interacting crumpled manifolds},
   journal       = {Nuclear Phys. B},
   fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
@@ -25509,6 +25496,21 @@
   mrnumber      = {1215176},
   doi           = {10.1016/0550-3213(93)90226-F},
   url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+@article{david.duplantier.ea:93:renormalization*1,
+  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
+  title         = {Renormalization of crumpled manifolds},
+  journal       = {Phys. Rev. Lett.},
+  fjournal      = {Physical Review Letters},
+  volume        = {70},
+  year          = {1993},
+  number        = {15},
+  pages         = {2205--2208},
+  issn          = {0031-9007},
+  mrclass       = {82B41 (81T17 81T30 82B28)},
+  mrnumber      = {1214561},
+  doi           = {10.1103/PhysRevLett.70.2205},
+  url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 @article{david.duplantier.ea:94:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
@@ -25672,21 +25674,6 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25700,6 +25687,21 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -36815,23 +36817,7 @@
   mrnumber      = {1294070},
   url           = {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
-@article{hara.slade:00:scaling,
-  author        = {Hara, Takashi and Slade, Gordon},
-  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
-  journal       = {J. Statist. Phys.},
-  fjournal      = {Journal of Statistical Physics},
-  volume        = {99},
-  year          = {2000},
-  number        = {5-6},
-  pages         = {1075--1168},
-  issn          = {0022-4715},
-  mrclass       = {82B43 (60K35)},
-  mrnumber      = {1773141},
-  mrreviewer    = {Remco van der Hofstad},
-  doi           = {10.1023/A:1018628503898},
-  url           = {https://doi.org/10.1023/A:1018628503898}
-}
-@incollection{hara.slade:00:scaling*1,
+@incollection{hara.slade:00:scaling,
   author        = {Hara, Takashi and Slade, Gordon},
   title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {II}. {I}ntegrated super-{B}rownian excursion},
   note          = {Probabilistic techniques in equilibrium and nonequilibrium statistical physics},
@@ -36847,6 +36833,22 @@
   mrreviewer    = {Remco van der Hofstad},
   doi           = {10.1063/1.533186},
   url           = {https://doi.org/10.1063/1.533186}
+}
+@article{hara.slade:00:scaling*1,
+  author        = {Hara, Takashi and Slade, Gordon},
+  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {99},
+  year          = {2000},
+  number        = {5-6},
+  pages         = {1075--1168},
+  issn          = {0022-4715},
+  mrclass       = {82B43 (60K35)},
+  mrnumber      = {1773141},
+  mrreviewer    = {Remco van der Hofstad},
+  doi           = {10.1023/A:1018628503898},
+  url           = {https://doi.org/10.1023/A:1018628503898}
 }
 @article{hara.slade:91:critical,
   author        = {Hara, Takashi and Slade, Gordon},
